# joystick-mapper

./: .gitignore  Cargo.toml  README.md  TODO
examples/: among-us.conf  duck-game.conf  kosmi-psxparty.conf  lolbeans.conf  minecraft.conf  sample.conf
joystick-mapper/: Cargo.toml
joystick-mapper-among-us/: Cargo.toml
joystick-mapper-among-us/src/: main.rs  opencv.rs  vent.rs
joystick-mapper-lib/: Cargo.toml
joystick-mapper-lib/src/: action_client.rs  joystick_client.rs  lib.rs
joystick-mapper/src/: main.rs
opencv-sys/: Cargo.toml  build.rs
opencv-sys/src/: core.rs  lib.rs
scripts/: mac_pack.sh  package.sh
src/: action_client.rs  keymapping.rs  main.rs
