[package]
name = "joystick-mapper"
version = "0.1.0"
authors = ["Federico Rampazzo <frampone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = { version  = "0.8.0", features = ["serde-serialize"] }
enigo = { version = "0.0.14", features = ["with_serde"] }
serde_yaml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
fxhash = "0.2.1"

[patch.crates-io]
enigo = { git = "https://github.com/framp/enigo", branch = "master" }