[package]
name = "joystick-mapper-lib"
version = "0.1.0"
authors = ["Federico Rampazzo <frampone@gmail.com>"]
edition = "2018"

[dependencies]
gilrs = { version  = "0.8.0", features = ["serde-serialize"] }
enigo = { version = "0.0.14", features = ["with_serde"] }
serde = { version = "1.0", features = ["derive"] }
fxhash = "0.2.1"